--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.13.1",
   "description": "A node API wrapper for Binance",
   "main": "dist",
+  "browser": {
+    "crypto": false,
+    "./dist/http-client.js": "./dist/http-client.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist",
     "index.d.ts"
@@ -23,10 +33,10 @@
   },
   "dependencies": {
     "https-proxy-agent": "^5.0.0",
-    "isomorphic-fetch": "^3.0.0",
     "isomorphic-ws": "^4.0.1",
     "json-bigint": "^1.0.0",
     "lodash.zipobject": "^4.1.3",
+    "node-fetch": "^2.7.0",
     "reconnecting-websocket": "^4.2.0",
     "ws": "^7.2.0"
   },
@@ -42,17 +52,14 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "coveralls": "^3.0.9",
     "dotenv": "^8.2.0",
-    "eslint": "^6.7.1",
+    "eslint": "^9.38.0",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-config-zavatta": "^6.0.3",
+    "eslint-config-zavatta": "^6.0.0",
     "nock": "^14.0.10",
-    "nyc": "^14.1.1",
+    "nyc": "^17.1.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "isomorphic-fetch/node-fetch": "2.6.1"
   },
   "engines": {
     "npm": ">= 6.0.0"
