--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Install OpenVPN
         run: |
           sudo apt-get update
@@ -45,6 +48,9 @@ jobs:
         run: npm run static-tests
       - name: All Tests
         run: npm test
+
+      - name: Browser Tests
+        run: npm run test:browser
 
       # - name: Run checks
       #   run: npm run ci
