--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   "scripts": {
     "build": "rm -rf dist && babel src -d dist",
     "prepare": "npm run build",
-    "test": "ava --timeout=10s -v",
+    "test": "npm run test:ava && npm run test:browser",
+    "test:ava": "ava --timeout=10s -v",
+    "test:browser": "node test/browser/browser-test-runner.mjs && ava test/browser/crypto-browser-playwright.js test/browser/websocket-browser.test.js --timeout=15s -v",
+    "test:browser:signature": "node test/browser/browser-test-runner.mjs",
+    "test:browser:websocket": "ava test/browser/websocket-browser.test.js --timeout=15s -v",
+    "test:browser:crypto": "ava test/browser/crypto-browser-playwright.js --timeout=15s -v",
     "cover": "nyc ava",
     "report": "npm run cover && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src",
@@ -55,8 +60,10 @@
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-zavatta": "^6.0.0",
+    "glob": "^11.0.3",
     "nock": "^14.0.10",
     "nyc": "^17.1.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -71,7 +78,10 @@
     ],
     "files": [
       "test/**/*",
-      "!test/utils.js"
+      "!test/utils.js",
+      "!test/config.js",
+      "!test/browser-compat.mjs",
+      "!test/browser/**/*"
     ]
   },
   "author": "Balthazar Gronon <git@balthazar.dev>",
