--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.13.1",
   "description": "A node API wrapper for Binance",
   "main": "dist",
+  "browser": {
+    "crypto": false,
+    "./dist/http-client.js": "./dist/http-client.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist",
     "index.d.ts"
@@ -10,7 +20,12 @@
   "scripts": {
     "build": "rm -rf dist && babel src -d dist",
     "prepare": "npm run build",
-    "test": "ava --timeout=10s -v",
+    "test": "npm run test:ava && npm run test:browser",
+    "test:ava": "ava --timeout=10s -v",
+    "test:browser": "node test/browser/browser-test-runner.mjs && ava test/browser/crypto-browser-playwright.js test/browser/websocket-browser.test.js --timeout=15s -v",
+    "test:browser:signature": "node test/browser/browser-test-runner.mjs",
+    "test:browser:websocket": "ava test/browser/websocket-browser.test.js --timeout=15s -v",
+    "test:browser:crypto": "ava test/browser/crypto-browser-playwright.js --timeout=15s -v",
     "cover": "nyc ava",
     "report": "npm run cover && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src",
@@ -23,10 +38,10 @@
   },
   "dependencies": {
     "https-proxy-agent": "^5.0.0",
-    "isomorphic-fetch": "^3.0.0",
     "isomorphic-ws": "^4.0.1",
     "json-bigint": "^1.0.0",
     "lodash.zipobject": "^4.1.3",
+    "node-fetch": "^2.7.0",
     "reconnecting-websocket": "^4.2.0",
     "ws": "^7.2.0"
   },
@@ -44,15 +59,14 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-config-zavatta": "^6.0.3",
+    "eslint-config-zavatta": "^6.0.0",
+    "glob": "^11.0.3",
     "nock": "^14.0.10",
-    "nyc": "^14.1.1",
+    "nyc": "^17.1.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "isomorphic-fetch/node-fetch": "2.6.1"
   },
   "engines": {
     "npm": ">= 6.0.0"
@@ -64,8 +78,13 @@
     ],
     "files": [
       "test/**/*",
-      "!test/utils.js"
-    ]
+      "!test/utils.js",
+      "!test/config.js",
+      "!test/browser-compat.mjs",
+      "!test/browser/**/*"
+    ],
+    "concurrency": 1,
+    "timeout": "60s"
   },
   "author": "Balthazar Gronon <git@balthazar.dev>",
   "homepage": "https://github.com/ccxt/binance-api-node",
