--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "files": [
     "dist",
-    "index.d.ts"
+    "index.d.ts",
+    "types"
   ],
   "scripts": {
     "build": "rm -rf dist && babel src -d dist",
