chore: Bump version 13.5 (#690)
* fix(package): include types folder

* release: cut the 0.13.3 release

* release: cut the 0.13.4 release

* chore: update readme

* release: cut the 0.13.4 release

* release: cut the 0.13.5 release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "binance-api-node",
-  "version": "0.13.3",
+  "version": "0.13.5",
   "description": "A node API wrapper for Binance",
   "main": "dist",
   "browser": {
@@ -15,7 +15,8 @@
   },
   "files": [
     "dist",
-    "index.d.ts"
+    "index.d.ts",
+    "types"
   ],
   "scripts": {
     "build": "rm -rf dist && babel src -d dist",
