fix(types): add runtime enum exports, WebSocket types, and futuresOrder algo response
- Add runtime exports for OrderSide, OrderType, TimeInForce, OrderStatus,
  RateLimitType, RateLimitInterval, TradingType so enum values work at runtime
- Add types/websocket.d.ts with event interfaces and BinanceWebSocket interface
- Add ws property to BinanceRest and export websocket types from index.d.ts
- Add FuturesAlgoOrderResponse type and union return for futuresOrder
- Add missing futuresOrder payload fields (triggerPrice, positionSide, etc.)
- Add top-level "types" field to package.json for older TS moduleResolution

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.13.6",
   "description": "A node API wrapper for Binance",
   "main": "dist",
+  "types": "index.d.ts",
   "browser": {
     "crypto": false,
     "./dist/http-client.js": "./dist/http-client.js"
